@@ -1,3 +1,6 @@
+* 2005-05-08 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Add embed module to embed Veusz in other Python apps
+	
 * 2005-05-07 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Complete data editing dialog
 	- Add data new dialog
